Add report to project corpus RE #NONE

--- a/corpus/index.html
+++ b/corpus/index.html
@@ -303,7 +303,7 @@
       </tr>
       <tr>
         <td>DEL.2.</td>
-        <td><a href="Evaluation/TechnicalReport.pdf">Technical Report</a></td>
+        <td><a href="CO600 REPORT.docx">Technical Report</a></td>
         <td align="center">(Mostly) AJ418</td>
         <td>N/A</td>
         <td>*</td>
